# robotics-rl-navigation-turtlebot3

./: README.md  README_TurtleBot3_Fisico.md
a2c_models/: a2c_dagger.pth  a2c_sim.pth
turtlebot3_a2c/: package.xml  setup.cfg  setup.py
turtlebot3_a2c/turtlebot3_a2c/: a2c_agent.py  dagger_agent.py  environment.py  keyboard.py  networks.py  settings.py  utils.py
