<?xml version="1.0"?>
<package format="3">
  <name>turtlebot3_a2c</name>
  <version>0.1.0</version>
  <description>A2C continuo para TurtleBot3 (DS5345 - UTEC)</description>
  <maintainer email="ana@example.com">ana</maintainer>
  <license>MIT</license>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>std_srvs</exec_depend>
  <exec_depend>gazebo_msgs</exec_depend>
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
